--- a/TODO
+++ b/TODO
@@ -1,15 +1,21 @@
 *Next things to do
 
-  - At error, if changing window and changing back, the pdf disappears. Maybe I should do sth with that.
+  - At compilation error, if changing window and changing back, the pdf disappears. Maybe I should do sth with that.
     Well, I should actually display the error message.
   - I think there is a bug: compile with error, close the program, open it, correct the error and try to compile again, then the pdf is None.
   - At resizing pdf does not keep its position
+  - Gtk side of command completion.
+  - Stack for log viewing
 
 
 *Concrete but not so urgent
 
-  - Double check the process runner, not sure if it actually works. Some point change it to be able to cancel (at some tikz errors latex goes to infinite loop)
-  - Some nicer way for the state saver, the file is direct calling. Maybe rewrite it to signals.
+  - Some nicer way for the state saver, saving the current file is function calling. Maybe rewrite it to signals.
+  - Synctex is not ready. 
+    - Highlight line in editor
+    - highlight region in pdf
+    - Synctex backwards through command line never worked: offset is always 0.
+    - Something is still a bit off with synctex forward. 
  
 *Future plans
 
@@ -19,4 +25,4 @@
   - Render equations inline
   - Render tikz inline
   - Some drawing thing
-  - Possibly a latex editing widget
+  - Possibly a wysiwyg latex editing widget
