Log list gets cleared up before adding new entries

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-This is my latex editor. Managed to un-flatpak from builder as I had trouble with texlive.
+# About
+
+This is my latex editor learning platform. I made this project just to learn Gtk and either be able to make my own latex editor or contribute to Stezer, so don't expect a lot. The code is messy and the program itself misses essential features, so it's totally unusable. Maybe I'll clean it up at some point. At least it's short (so far), so if you want to look up how to do something particular with Gtk (especially SourceView), it might help. Right now having it without flatpak as I had trouble with texlive.
 
 # Installation
 
